--- a/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Indochinese_Union_l_english.yml
@@ -106,7 +106,7 @@ INC_People's_Air_Defence_idea:0 "People's Air Defence"
 INC_People's_Air_Defence_idea_desc:0 "Indochina has created a robust network of air defence emplacements and prioritised the construction of new anti-air ordnance. The skies of Indochina are becoming increasingly secure."
 INC_Guerilla_in_the_Air_idea:0 "Guerrilla in the Air"
 INC_Guerilla_in_the_Air_idea_desc:0 ""
-INC_Tank_Pannick_idea:0 "Panzer Panic"
+INC_Tank_Pannick_idea:0 "전차에 대한 공포"
 INC_Tank_Pannick_idea_desc:0 "Harrowing encounters with German Panzers by Indochinese guerillas have demoralised many Indochinese soldiers and even occassionally cause rebel forces to route."
 INC_The_Night_Belongs_to_Charlie_idea:0 "The Night Belongs to Charlie"
 INC_The_Night_Belongs_to_Charlie_idea_desc:0 ""
@@ -114,7 +114,7 @@ INC_French_Connection_idea:0 "Franco-Indochinese Special Relationship"
 INC_moderate_land_reform_idea:0 "토지 개혁"
 INC_somehow_radical_land_reform_idea:0 "토지 개혁"
 INC_radical_land_reform_idea:0 "토지 개혁"
-INC_collectivisation_idea:0 "Collectivisaton"
+INC_collectivisation_idea:0 "집단농장"
 INC_socialist_reform_idea_a:0 "사회주의 개혁"
 INC_socialist_reform_idea_b:0 "사회주의 개혁"
 INC_Military_Chaos_idea:0 "Military Chaos"
@@ -229,7 +229,7 @@ viet.5.a:0 "우리는 선택의 여지가 없다."
 
 viet.5.e:0 "Keep the pace."
 
-viet.6.t:0 "National Assembly"
+viet.6.t:0 "국민의회"
 viet.6.d:0 "Despite some controversy about whether counter-revolutionary suspects should be given election right, the provisional government decided that all people 18 years old or older were eligible to vote to generate the National Assembly, which is expected to be the highest organ of the state exerting both legislative and executive power. Now, the first national election in the Indochinese history, against all odds, has been conducted in such an emergent situation. A new majority emerged in the newly convened National Assembly and appointed a chairman of Assembly, also the head of state..."
 viet.6.a:0 "Nguyen An Ninh's charisma conquered everyone!"
 viet.6.b:0 "Ta Thu Thau secured the support of workers!"
@@ -265,16 +265,16 @@ viet.11.a:0 "Congratulations!"
 
 viet.12.t:0 "유럽인 정착민들"
 viet.12.d:0 "About 20,000 European settlers living in Saigon is a troublesome issue to us. They served in colonial administration and monopolised almost all modern economy sectors in Indochina. While some revolutionaries decided to side with our just cause, most are die-hard reactionaries. How should we deal with them?"
-viet.12.a:0 "Force them to work for us!"
+viet.12.a:0 "그들이 우리를 위해 일하도록 강요케하라!"
 viet.12.b:0 "Trade Unions takeover and decide!"
-viet.12.c:0 "Nationalise their assets and put them into jail!"
+viet.12.c:0 "그들의 재산을 국유화하고 옥에 넣어라!"
 
 viet.13.t:0 "종교 주제"
 viet.13.d:0 "Cochinchina is home to millions of Buddhists, Christians and Caodaists. For many years religion played a dominant role in people's life. With the establishment of our revolutionary government, these religious believers are on the brink of panic. We need to enlighten our people, but drastic methods might cause serious backlash, and damage our war effort."
-viet.13.a:0 "Declare State Secularism"
-viet.13.b:0 "They are also patriots, we need to unite."
-viet.13.c:0 "Integrate and transform them into a civic religion."
-viet.13.e:0 "Secretly purge religious leaders."
+viet.13.a:0 "세속적인 국가를 선언케한다."
+viet.13.b:0 "그들은 또한 애국자이며, 우리는 단결 할 필요가 있다."
+viet.13.c:0 "그들을 시민 종교로 통합하고 탈바꿈케하라."
+viet.13.e:0 "비밀리에 종교 지도자들을 제거하라"
 
 viet.14.t:0 "탈주 사태"
 viet.14.d:0 "Panicked by the revolution and the war, many Cao Dai believers and Catholics were deceived by their religious authority and decided to flee from our motherland. Hundreds of thousands of people try to escape from our control zone!"
@@ -430,7 +430,7 @@ viet.42.a:0 "Excellent"
 #The Nationalist party has established a entrenched political network within the country. Their party members are influential in the state bureaucracy and army. They posed a hidden threat to our political leadership. In order to carry out our reforms, we must deal with the situation.
 
 
-viet.51.t:0 "Agricultural Recovery"
+viet.51.t:0 "농업의 회복"
 viet.51.d:0 "The resistance war has come to an end. Now it's time to cure the war-torn motherland. During the war, agricultural production was heavily dirupted and hundreds of thousands of farmers fled from their land to join the army or seek refuge. It might take at least a year for agriculture, the major sector of our economy, to recover."
 viet.51.a:0 "Excellent"
 
@@ -454,11 +454,11 @@ viet.63.a:0 "At least it's a reform..."
 viet.63.b:0 "We have done our best..."
 viet.63.c:0 "Liberation came with a price..."
 
-viet.65.t:0 "The resistance from landlords"
+viet.65.t:0 "지주들의 저항"
 viet.65.d:0 "Despite the landholding limit regulation, landlords managed to keep their lands via various formal or informal means.Tenants and poor peasants see little improvement of their life and complaint that the government is with the landlords. People are very dissapointed."
-viet.65.a:0 "Well"
+viet.65.a:0 "잠깐만"
 viet.65.b:0 "Need to strengthen bureaucracy to implement reform"
-viet.65.c:0 "Landlordism is the problem!"
+viet.65.c:0 "이래선 지주제가 문제다!"
 
 viet.66.t:0 "Extremism spreading in countryside"
 viet.66.d:0 "Motivated by the government, many peasants rose up to seize land, means of production and private possessions from landlords. Many landlords are humiliated and receive corporal punishment from peasants. Some prestigious scholar-gentries committed suicide. Many intellectuals protest that the government should act to protect law and order."
@@ -551,10 +551,10 @@ viet.88.a:0 "We should try to improve their equipments and working condition."
 viet.88.b:0 "We shouldn't let women go to dangerous places."
 viet.88.c:0 "Sorry but we can't do anything."
 
-viet.89.t:0 "The 1900th anniversary of Trung Sister uprising"
+viet.89.t:0 "쯩 자매 봉기 1900주년 기념식"
 viet.89.d:0 "From AD 40 to 42 two sisters, Trung Trac and Trung Nhi rose up against invaders for independence and liberty. Despite their failure, Trung sisters have become the symbol of our resistance and heroism. This year is the 1900th anniversary of Trung Sister uprising. Parades and ceremonies are held in Saigon and Trung sister temples."
-viet.89.a:0 "What a great day."
-viet.89.b:0 "Our women should serve on the front lines like Trung sisters!"
+viet.89.a:0 "위대한 날이다!"
+viet.89.b:0 "우리의 여성들은 쯩 자매처럼 최전선에 봉사해야한다!"
 
 viet.90.t:0 "경제 공황"
 viet.90.d:0 "The outbreak of Weltkrieg cut down our connection to Europe. Our economy, heavily relying on the Commune of France, is suffering from the chaos."
@@ -731,11 +731,11 @@ viet.156.a:0 "Enlist them as soldiers against Imperialism"
 viet.156.b:0 "Assist the inspiring growth of Indochinese socialism and economy"
 viet.156.c:0 "What can we get from this? Pho?"
 
-viet.157.t:0 "Military Ties with France"
+viet.157.t:0 "프랑스와의 군사협정"
 viet.157.d:0 "Our comrades in the Commune of France haven't forgotten us. France has decided to establish a close political and military relationship with us. They sent their political specialists, military engineers and officers to facilitate the development of socialism and military force in Indochina."
 viet.157.a:0 "Solidarity Forever!"
 
-viet.158.t:0 "Economic Ties with France"
+viet.158.t:0 "프랑스와의 경제협정"
 viet.158.d:0 "Our comrades in the Commune of France haven't forgotten us. France has decided to establish a close political and economic relationship with us. They sent their political specialists, engineers and technicians to facilitate the development of socialism and industrialisation in Indochina."
 viet.158.a:0 "Solidarity Forever!"
 
@@ -783,8 +783,8 @@ spend_5_war_support:0 "§Y5§! War Support"
 spend_5_war_support_blocked:0 "§R5§! War Support"
 spend_5000_manpower:0 "£manpower_texticon §Y5000§!"
 spend_5000_manpower_blocked:0 "£manpower_texticon §R5000§!"
-INC_sabotage_tonkin_decision:0 "북부 베트남의 사보타지"
-INC_sabotage_annam_decision:0 "중부 베트남의 사보타지"
+INC_sabotage_tonkin_decision:0 "북부 베트남에서의 사보타지"
+INC_sabotage_annam_decision:0 "중부 베트남에서의 사보타지"
 INC_urban_terrorism_decision:0 "Launch Urban Terrorism Attack"
 INC_expand_secret_societies_decision:0 "Develop Rural Secret Societies"
 INC_intensify_harrassment_decision:0 "Intensify Harassment"
@@ -813,12 +813,12 @@ INC_tet_failure:0 "Our Guerrillas will be decimated"
 INC_form_khmer_issarak_decision:0 "Form Khmer Issarak"
 INC_form_pathet_lao_decision:0 "Form Pathet Lao"
 INC_troops_can_be_upgraded:0 "§YThe units formed in this decision can be upgraded or deleted via national focuses§!"
-INC_reorganise_Indochinese_rifles_decision:0 "Reorganise Indochinese Rifles"
+INC_reorganise_Indochinese_rifles_decision:0 "인도차이나 소총병 재조직화"
 INC_reorganise_Indochinese_rifles_decision_desc:0 "With the help of officers trained in France, including Weltkrieg veterans, we are able to grasp modern military tactics in a short period. However, we still need to know how to organise modern land units. A quick way to learn it is to reorganise the existing Indochinese rifle units(Linh Tap) into model units based on French system. These will also be our main force units. However, the reorganisation will take some time."
 INC_reorganise_Indochinese_rifles_tooltip:0 "Unlock template §YSu doan Bo binh chu luc§!\nForm main force unit §YDivision 308§!\nForm main force unit §YDivision 304§!\nForm main force unit §YDivision 312§!"
-INC_infiltrate_the_north_decision:0 "Infiltration of the North"
+INC_infiltrate_the_north_decision:0 "북쪽으로의 침투"
 INC_infiltrate_the_north_decision_desc:0 "While the frontline is becoming a stalemate, we have open up secret through Annamite Range to the North. Now we can send personnels and arms to support the guerillas in the North."
-INC_negotiate_with_germs_decision:0 "Negotiate with Germany"
+INC_negotiate_with_germs_decision:0 "독일과의 협상"
 INC_negotiate_with_germs_tooltip:0 "We will start negotiating with Germany for peace, but stubborn imperialists won't give up easily. Taking initiative in the battlefield, enemy's weariness in homefront or favorable international situation could help our cause."
 #Manpower crisis
 #The resistance and revolution should depend on the voluntary spirit of Indochinese people. That being said, the manpower crisis of our newly-born army is more and more severe. Introducing a draft will solve the problem, but it's worried that the new state apparatus doesn't have the ability to carry out conscription well...
@@ -837,7 +837,7 @@ INC_negotiate_with_germs_tooltip:0 "We will start negotiating with Germany for p
 #We shouldn't push that hard!
 #We need to enforce military discipline
 
-INC_agriculture_decisions:0 "Agricultural Production"
+INC_agriculture_decisions:0 "농업 생산"
 INC_agriculture_decisions_desc:0 "The Monsoon Wind, blowing from Africa across the Indian Ocean brings water and sediment to the eastern rim of the Indochina peninsula, where millions of farmers live on several coastal plains. The entire Indochinese economy relies on its agricultural production, heavily merchandised yet vulnarable. The agricultural production in general is very susceptible to climate variability, but certain decisions and changes introduced by our government or farmers themselves could also have an impact."
 
 #Typhoon hits
@@ -908,7 +908,7 @@ INC_collectivisation_experiment_decision_desc:0 "The ultimate goal of we sociali
 #Peasants respond passively to land reform
 
 
-INC_smuggling_decisions:0 "Arms-Trafficking Network"
+INC_smuggling_decisions:0 "무기 밀수 연결망"
 INC_smuggling_decisions_desc:1 "Under the emergent war situation, we have activated an international underground smuggling network to gain desperately needed weapon and all war materials. The network will give us access to foreign weapons and war materials against enemy blockade. \n"
 INC_Something_I_Want_to_Implement:0 "\nCurrent §YCapacity§! of the §YUnderground Arms-Trafficking§!: £convoy_texticon [?INC.network_strength|-0]\n"
 spend_10_smuggle:0 "§Y10§! Traffick Capacity"
@@ -917,23 +917,23 @@ spend_10_smuggle_tooltip:0 "It costs §R10§! §YGuerrilla Strength§! to take t
 INC_expand_network_in_Siam_decision:0 "Smuggling along the Mekong river."
 INC_expand_network_in_Siam_decision_desc:0 "The Mekong river is not only the mother river of people living in the Mekong delta, but also notorious for being the sanctuary of smugglers in the Indochinese peninsula. Germany has no ability to control underground activities along the river, and we should take the chance."
 INC_expand_network_in_Siam_tooltip:0 "§YThis will give us access to arms dealers around the Indochinese peninsula§!"
-INC_build_junk_fleet_decision:0 "Create Junk fleet"
+INC_build_junk_fleet_decision:0 "정크선 선단 창설"
 INC_build_junk_fleet_decision_desc:0 "While the powerful German navy is able to interdict International convoys from approaching South China Sea, they can never capture every junk ship here. By mobilising fishermen, we can create our own junk fleet to serve the noble cause of smuggling"
 INC_build_junk_fleet_tooltip:0 "§YThis will give us access to arms dealers around the South China Sea§!"
-INC_smuggling_in_Siam_decision:0 "Buy arms from black market in Siam"
+INC_smuggling_in_Siam_decision:0 "시암의 암시장으로부터 무기 구매"
 INC_smuggling_in_Siam_decision_desc:0 "Gun control in Siam is weak. It's possible for us to directly buy guns from Siamese black market. However, this could bring unwanted notice from Siamese authority..."
 INC_to_Bharatiya:0 "§YThis could help to establish a line of communication to our faithful friend, Bharatiya Commune§!"
 INC_receive_aid_from_Bharatiya:0 "Receive aids from Bharatiya"
 INC_receive_aid_from_Bharatiya_desc:0 "Bharatiya Commune has generously offered their help. We only need to carry them into Indochina."
-INC_smuggling_in_Hongkong_decision:0 "Entente Weapon Surplus"
+INC_smuggling_in_Hongkong_decision:0 "협상국의 잉여무기"
 INC_smuggling_in_Hongkong_decision_desc:0 "Large numbers of Entente Weltkrieg weapon surplus is available in Hongkong. It's not hard to purchase some weapons under disguise."
 INC_purchase_support_in_Hongkong_decision:0 "Purchase war materials from Hongkong"
 INC_purchase_support_in_Hongkong_decision_desc:0 "Purchase war materials including medicine, radios, and bycicles from Hongkong."
-INC_set_up_network_in_Burma_decision:0 "Infiltrate Burma"
+INC_set_up_network_in_Burma_decision:0 "버마로 침투하다"
 INC_set_up_network_in_Burma_decision_desc:0 "One way to gain safe access to our fraternal ally Bharatiya Commune is through Burma. However, we have to deal with various local factions there..."
-INC_deal_with_Chinese_warlord_decision:0 "Deal with Chinese warlord"
+INC_deal_with_Chinese_warlord_decision:0 "중국 군벌과의 거래"
 INC_deal_with_Chinese_warlord_decision_desc:0 "One way to gain safe access to our fraternal ally Bharatiya Commune is through Yunnan. However, we have to deal with the Chinese warlord..."
-INC_expand_arm_workshop_decision:0 "Expand Arms Workshop"
+INC_expand_arm_workshop_decision:0 "무기 작업장 확대"
 INC_expand_arm_workshop_decision_desc:0 "By importing necessary materials, we can expand the arms production facilities in Saigon."
 INC_lower_trafficking_cost:0 "This will lower the §YCost§! of §YArms-Trafficking§!"
 #Contact Japanese agents
@@ -1015,9 +1015,9 @@ INC_declare_dai_viet_decision_desc:0 "Indochina is a fake nation, we must assert
 ### Focuses ###
 INC_Revolutionary_Provisional_Government:0 "혁명 임시정부"
 INC_Revolutionary_Provisional_Government_desc:0 "The 'Viet Minh', or 'League for the Independence of Vietnam', is a broad coalition of groups which seek the immediate independence of Vietnam. The Viet Minh, despite its deep political divisions, has managed to establish a provisional Indochinese government. As of yet, however, the structure of this government is largely informal and in need of reform."
-INC_General_Van_Tien_Dung's_Reform:0 "General Staff's Reform Plan"
+INC_General_Van_Tien_Dung's_Reform:0 "총참모부의 개혁 계획안"
 INC_General_Van_Tien_Dung's_Reform_desc:0 "The infantile People's Army of Indochina needs to be reformed. The general staff advocates well-planned surprise offensives as the basis of doctrine. With extensive planning, deep infiltration and modernised armaments, Indochina's army will be able to simultaneously assault multiple fronts, surprise the enemy, and cause their total disintegration."
-INC_General_Nguyen_Chi_Thanh's_Reform:0 "Political Officer's Reform Plan"
+INC_General_Nguyen_Chi_Thanh's_Reform:0 "정치장교들의 개혁 계획안"
 INC_General_Nguyen_Chi_Thanh's_Reform_desc:0 "The infantile People's Army of Indochina needs to be reformed. The political department of army believes that human will is the key to victory. The courage and tenacity of Indochinese soldiers is our greatest weapon. We will engaged in prolonged guerrilla warfare to wear down our enemies, and fiercely strike them when they are exhausted and demoralised."
 INC_Cam_Ranh_Bay_Expansion:0 "Cam Ranh Bay Expansion"
 INC_Cam_Ranh_Bay_Expansion_desc:0 "Cam Ranh Bay is among the best natural military harbours in the world. It was used as the staging area of the Russian Baltic Fleet in 1905 before they departed for the Battle of Tsushima, and the Deutsch-Ostasien Fleet during the German Intervention in the Chinese Civil War. Expanding the Cam Ranh Bay naval base will greatly improve our own naval construction capacity."
@@ -1025,7 +1025,7 @@ INC_Air_Defence_Air_Force:0 "Air Defence Air Force"
 INC_Air_Defence_Air_Force_desc:0 "We have suffered too much from enemy air strikes, and must build our own air force to counter them. However, Indochina is quite poor and the enemy will surely have a far greater number of aircraft. Thus, we must also build air defences. Through continued expansion of our air force, perhaps one day we can bomb our enemies back to the stone age."
 INC_Break_the_Chain:0 "사슬을 깨부숴라"
 INC_Break_the_Chain_desc:0 "Feudal and colonial bureaucracy is the chain that has shackled our people for a millennium. Let us reform these institutions and break this great chain forever more!"
-INC_Incorporate_Administration:0 "Incorporate Administration"
+INC_Incorporate_Administration:0 "행정체계 통합"
 INC_Incorporate_Administration_desc:0 "Our newly born state is severely lacking in civil servants. We must incorporate the reminents of the old administration and integrate its civil servants!"
 INC_Anti_Infiltration_Campaign:0 "Anti-Infiltration Campaign"
 INC_Anti_Infiltration_Campaign_desc:0 "Nearly every revolutionary organisation in Indochina was inundated with spies and infiltrated by the colonial police. Undoubtedly, insidious enemies still send their agents to sabotage our revolution."
