--- a/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
@@ -288,45 +288,45 @@ albania.67.b:0 "우리는 그러한 제의를 거절해야 한다."
 
 ### Focuses ###
 ALB_aftermath_of_black_monday:0 "검은 월요일의 여파"
-ALB_aftermath_of_black_monday_desc:0 "Black Monday, an economic crash originating in Germany, has just hit Albania! Because of our agricultural economy, alongside minimal industrialisation and a poor financial system, we have been hit very hard by this event and our people continually grow dissatisfied as unemployment rates have skyrocketed while the economy is now in free fall."
+ALB_aftermath_of_black_monday_desc:0 "독일에서 시작된 경제 붕괴가 알바니아를 강타했습니다! 최저의 산업화와 빈곤한 금융 시스템 덕분에 우리 농업 경제로 인해 우리는 이 사건으로 엄청난 타격을 입었고 현재 경제가 붕괴 상태에 있는 동안 실업률이 급증하면서 사람들은 지속적으로 불만을 갖게 되었습니다."
 ALB_bashkimi_economic_policy:0 "통합당 경제 정책"
-ALB_bashkimi_economic_policy_desc:0 "Bashkimi have emerged victorious from the Albanian Elections of 1936. Their economic platform is one based around land redistribution, industrialisation of the nation, reformation of the financial system, balancing the budget, and assisting the lower class of Albania by abolishing the feudal system and replacing subsistence farming with better farming techniques."
+ALB_bashkimi_economic_policy_desc:0 "바쉬키미는 1936년 알바니아 선거에서 승리를 거두었습니다. 그들의 경제적인 플랫폼은 토지 재배포, 산업화, 재정 시스템 개혁, 예산 균형, 봉건제를 폐지하고 알바니아의 하급층을 지원하며, 자급자족 농업을 더 나은 농업 기술로 대체하는 것입니다."
 ALB_progressive_economic_policy:0 "진보당 경제 정책"
-ALB_progressive_economic_policy_desc:0 "The Progressives have emerged victorious from the Albanian Elections of 1936. Their economic platform is one based around the reorganisation of the financial system, balancing the budget, improving the sharecropping system, regulating the lek through deflation measures, and using tax incentives to help bring foreign businesses to Albania."
+ALB_progressive_economic_policy_desc:0 "진보주의자들은 1936년 알바니아 선거에서 승리를 거두었습니다. 그들의 경제적인 플랫폼은 금융 시스템의 재편, 균형 예산, 소작 제도의 개선, 디플레이션 대책을 통한 규제, 그리고 우시를 중심으로 하며, 외국 기업들이 알바니아로 오는 것을 돕기 위해 세금 혜택을 이용하는 것입니다."
 ALB_balance_the_budget:0 "예산의 균형을 맞추자"
-ALB_balance_the_budget_desc:0 "Even prior to Black Monday, Albania has faced a severe budget deficit due to little revenue and minimal economic output. We must take steps to balance the budget and ensure that we are running on a surplus so that we may pull ourselves out of this economic rut we currently occupy."
+ALB_balance_the_budget_desc:0 "검은 월요일 이전에도 알바니아는 수입이 적고 경제 생산량이 적어 심각한 예산 적자에 직면해 왔습니다. 우리가 현재 차지하고 있는 경제적인 틀에서 벗어날 수 있도록 예산의 균형을 맞추고 흑자를 내고 있음을 확인하는 조치를 취해야 합니다."
 ALB_banking_reform:0 "은행 개혁"
-ALB_banking_reform_desc:0 "The Albanian National Bank is heavily dependent on the funds of the landowners within Albania. With the recent economic crisis, many within the aristocracy have been unable to continue sending funds to the bank. It is clear that we must step in and ensure that the bank can better manage currency, promote economic growth, and retain the stability of prices."
+ALB_banking_reform_desc:0 "알바니아 국립 은행은 알바니아 내의 지주들의 자금에 크게 의존하고 있습니다. 최근의 경제 위기로 인해 귀족들 중 다수가 은행에 계속해서 자금을 보낼 수 없었습니다. 우리가 개입해서 은행이 통화를 더 잘 관리하고 경제 성장을 촉진하며 물가 안정을 유지할 수 있도록 해야 한다는 것은 분명합니다."
 ALB_industrialisation_programmes:0 "산업화 계획"
-ALB_industrialisation_programmes_desc:0 "Black Monday has revealed our economic weaknesses as we are suffering quite a bit due to the lack of industrialisation within our nation alongside heavy reliance on the sharecropping system run by the aristocracy, in favour of the aristocracy. It is clear that industrialisation programmes will be necessary to help reverse the effects of Black Monday and catch up to the other powers in Europe."
+ALB_industrialisation_programmes_desc:0 "검은 월요일은 우리의 산업화 부족으로 인한 우리나라의 경제적 약점을 드러냈습니다. 귀족들을 위한 산업화 프로그램이 검은 월요일의 영향을 역전시키고 유럽의 다른 세력들을 따라잡기 위해 필요할 것이 분명합니다."
 ALB_end_the_feudal_system:0 "봉건제 종결"
-ALB_end_the_feudal_system_desc:0 "The lower class within our nation have been at the whim of the landowners and the aristocracy for far too long. We must abolish the institutions that disenfranchise the common man and end systems such as sharecropping. We must ensure the freedom of all Albanians."
+ALB_end_the_feudal_system_desc:0 "우리 나라의 하층 계급은 너무 오랫동안 지주와 귀족들의 변덕에 사로잡혀 있었습니다. 우리는 일반인을 차별하는 제도와 소작 제도와 같은 제도를 폐지해야 합니다. 우리는 모든 알바니아인들의 자유를 보장해야 합니다."
 ALB_land_redistribution:0 "토지 재분배"
-ALB_land_redistribution_desc:0 "The landowners have hoarded what is rightfully the property of the Albanian people for far too long and have blocked any attempt to better reform our economy. We must force upon them the redistribution of land in order to assist both our peasants and our economy, Vërlaci and his Progressives be damned!"
+ALB_land_redistribution_desc:0 "토지 소유주들은 알바니아 국민들의 당연한 재산을 너무 오랫동안 소유해 왔고 우리 경제를 개선하려는 어떠한 시도도 막아 왔습니다. 우리는 농민들과 우리의 경제를 둘 다 돕기 위해 그들에게 토지 재분배를 강요해야만 합니다."
 ALB_establish_a_middle_class:0 "중산층 육성"
-ALB_establish_a_middle_class_desc:0 "While we have managed to empower the common man and redistribute land alongside increasing the economic and social prosperity of Albanians, we must begin the establishment of a middle class. In order to ensure that the people retain their current economic status and that Albania remains prosperous for the years to come, we must bring about the creation of an educated and affluent middle class."
+ALB_establish_a_middle_class_desc:0 "우리가 알바니아의 경제적 번영과 사회적 번영을 증진하는 동시에 일반인에게 권한을 부여하고 재배포 할 수 있게 된 반면 중산층의 설립을 시작해야 합니다. 사람들이 현재의 경제적 지위를 유지하고 알바니아가 장래에 번영 할 수 있도록 보장하기 위해 우리는 교육받은 풍요로운 중산층을 만들어야 합니다."
 ALB_new_farming_techniques:0 "새로운 농업 기술"
-ALB_new_farming_techniques_desc:0 "As it stands, the peasant farmers in Albania use outdated equipment and farming techniques. Many of our farmers can only afford to own wooden plows and rely on subsistence farming as their primary farming method. If we are to improve the conditions of Albanian farmers and increase our agricultural output, it is crucial that we teach our farmers new farming techniques and upgrade their equipment."
+ALB_new_farming_techniques_desc:0 "현재로서는 알바니아의 농부들은 구식 장비와 구식 농사 기술을 사용하고 있습니다. 우리 농부들 중 많은 수가 나무쟁기를 가지고 있을 뿐이며 그들의 주된 농업 방법으로는 생계 유지 농업에 의존할 수 밖에 없습니다. 알바니아 농민들의 여건을 개선하고 농업 생산량을 늘리려면 우리가 우리 농민들에게 새로운 농업 기술을 가르치고 그들의 장비를 향상시키는 것이 중요합니다."
 ALB_trade_agreements:0 "무역 협정"
-ALB_trade_agreements_desc:0 "By enacting trade agreements with our neighbours, we can simultaneously improve relations while mutually benefiting from the economic benefit that comes from doing so. This will allow us to increase the amount of economic activity in Albania which will help us better combat the after effects of Black Monday."
+ALB_trade_agreements_desc:0 "이웃들과의 무역 협정을 제정함으로써, 우리는 관계를 개선하는 동시에 그렇게 함으로써 상호 간에 경제적 이익을 얻을 수 있습니다. 이것은 알바니아에서의 경제 활동의 양을 증가시킬 수 있게 해 줄 것이고, 이것은 우리가 검은 월요일 이후의 영향에 더 잘 대처하도록 도울 것입니다."
 ALB_improve_sharecroppping:0 "소작 제도 개선"
-ALB_improve_sharecroppping_desc:0 "Currently, our peasant farmers and sharecroppers continue to use outdated equipment, such as wooden plows, and, as a result, the amount of work they can do alongside their efficiency suffers because of how ill equipped they are to handle various situations. By upgrading their tools, we can ensure the uptick of agricultural output within Albania."
+ALB_improve_sharecroppping_desc:0 "현재 우리 농부와 소작농들은 나무쟁기와 같은 낡은 장비를 계속 사용하고 있으며, 결과적으로 다양한 상황을 처리하는것에 약하며 때문에 효율성과 함께 할 수 있는 작업량이 줄어 듭니다. 도구를 업그레이드함으로써 우리는 알바니아 내에서 농업 산출물의 증가를 보장 할 수 있습니다."
 ALB_fund_the_bank:0 "은행에 자금 지원"
-ALB_fund_the_bank_desc:0 "After Black Monday, many of the upper class were forced to pull out their funds from the bank which, in turn, left our bank on the brink of destruction. By incentivising the wealthy to invest in the banks, we can fill up the state’s coffer and better carry out the function of the bank while assisting companies and/or nobles who need the money."
+ALB_fund_the_bank_desc:0 "검은 월요일 이후, 상류층의 많은 사람들이 은행에서 그들의 자금을 인출하도록 강요 받았고, 그것은 결국 우리의 은행을 파산 직전에 두었습니다. 부자들에게 은행에 투자하도록 장려함으로써, 우리는 주 정부의 후원자를 채우고 자금이 필요한 기업이나 귀족들을 돕는 동시에 은행은 기능을 더 잘 수행할 수 있습니다."
 ALB_minor_industrialisation:0 "소규모 산업화"
-ALB_minor_industrialisation_desc:0 "Ahmet Zogu, the Prime Minister, has managed to convince Shefqet Vërlaci, the party leader, to enact a minor industrialisation programme in order to catch up to the rest of Europe and better fight the after effects of Black Monday. This programme will, however, be closely monitored by the landowning aristocracy so to not divert profit away from sharecropping and damage the current system in place."
+ALB_minor_industrialisation_desc:0 "총리인 아흐메트 조구는 셰프톄트 버를라치를 유럽의 나머지 지역을 따라잡기 위해 작은 산업화 프로그램을 시행하도록 설득하는데 성공했습니다. 그러나 이 프로그램은 토지 소유 귀족들에 의해 면밀하게 감시를 받을 것입니다."
 ALB_increased_agricultural_output:0 "농업 산출량 증대"
-ALB_increased_agricultural_output_desc:0 "By teaching our peasant farmers and sharecroppers new farming techniques, and gradually weening them off of subsistence farming, we can increase the agricultural output of the state as farmers will no longer produce for purely themselves and/or their families, but for the benefit of the state as well."
+ALB_increased_agricultural_output_desc:0 "우리 농부들과 소작농들에게 새로운 농법을 가르치고 점차적으로 자급자족 농업에서 벗어나게 함으로써 농부들이 더 이상 순전히 자신이나 가족을 위해 생산하지 않고 국가의 농업 생산량을 증가시키게 할 수 있습니다."
 ALB_tax_incentives:0 "감세 조치"
-ALB_tax_incentives_desc:0 "Providing businesses with special tax benefits and exemptions will be extremely useful in that they will set up branches in Albania, thereby increasing economic activity in our nation and, in turn, helping us better combat the effects of Black Monday through external investment."
+ALB_tax_incentives_desc:0 "기업에 특별 세금 혜택 및 면제를 제공하면 알바니아에 지사를 설립하여 우리나라의 경제 활동을 증진시키고 외부 투자를 통해 검은 월요일의 영향을 효과적으로 개선 할 수 있다는 점에서 매우 유용할 것입니다."
 ALB_enact_deflation_measures:0 "디플레이션 조치 시작"
-ALB_enact_deflation_measures_desc:0 "Enacting deflation measures and removing a certain amount of lek from circulation will allow us to reverse the inflation of the currency under Black Monday and assist the banks by beginning the stabilisation of our currency and, hopefully, maintaining that stability."
+ALB_enact_deflation_measures_desc:0 "디플레이션 조치를 제정하고 일정액의 대출금을 대출에서 제외하면 검은 월요일 이래의 통화의 인플레이션을 되돌리며 우리 통화가 안정되기 시작하고 그 안정성을 유지함으로써 은행을 지원할 수 있습니다."
 ALB_oil_drilling:0 "석유 채굴"
-ALB_oil_drilling_desc:0 "By extracting the vast oil resources of Albania that exist in areas such as Patos-Marinza, Kuçoca, and Driza, we can boost our economic output through the exchange of natural resources and make Albania a desirable area for investment."
+ALB_oil_drilling_desc:0 "파토스-마린자, 쿠소카, 드린자와 같은 지역에 있는 알바니아의 방대한 석유 자원을 추출함으로써 우리는 천연 자원의 교환을 통해 경제적 생산량을 향상시키고 알바니아를 투자의 바람직한 영역으로 만들 수 있습니다."
 ALB_infrastructural_improvements:0 "기반시설 향상"
-ALB_infrastructural_improvements_desc:0 "As it stands, the extremely limited and narrow gauge lines in our nation were only built for mine site and military purposes. If we are to better transport our people, resources, and troops throughout the nation, a comprehensive and working railway system must be built throughout Albania, in order to better connect our nation."
+ALB_infrastructural_improvements_desc:0 "현재 우리나라의 게이지 라인은 극도로 제한되고 좁으며 광산 부지와 군사적 목적으로만 건설되었습니다. 우리가 우리 국민, 자원, 그리고 군대를 전국으로 더 잘 수송하기 위해서, 우리의 국가를 더 잘 연결하기 위해서는 알바니아 전역에 걸쳐 종합적이고 실용적인 철도 시스템을 구축하여야 합니다."
 ALB_an_economic_miracle:0 "경제적 기적"
-ALB_an_economic_miracle_desc:0 "Against all odds, we have managed to beat the disastrous economic conditions faced during Black Monday and have managed to make Albania a financially sound and reformed nation. We can look forward to being known as a prosperous nation with bustling economic activity."
+ALB_an_economic_miracle_desc:0 "우리는 모든 상황에 대비하여 검은 월요일에서 직면한 비참한 경제 상황을 극복하고 알바니아를 재정적으로 건전하고 개혁적인 국가로 만들었습니다. 우리는 번화한 경제 활동으로 번영하는 국가로 알려지기를 기대해볼 수 있습니다."
 
 ALB_albanian_elections_of_1936:0 "1936년 알바니아 선거"
 ALB_albanian_elections_of_1936_desc:0 "The 1936 Elections will be hotly contested due to the split in ideas and growing rivalry between Bashkimi and the Progressives. With the people sick of the status-quo and demanding more civil liberties alongside land redistribution versus the unwillingness of the aristocracy to compromise, Albania has become very polarised. This election will determine the future of Albania for years to come."
