--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -1332,8 +1332,8 @@ war_is_hell:0 "제2차 세계대전이 시작됨"
 ENG_home_rule_op:0 "자치령"
 ENG_devolution_op:0 "독립"
 ENG_three_armies_op:0 "군사 원조"
-ENG_show_of_force_op:0 "Fleet Manoeuvres"
-ENG_encyclopedia_modifier:0 "Funded World Encyclopedia"
+ENG_show_of_force_op:0 "함대 기동"
+ENG_encyclopedia_modifier:0 "국제 백과사전에 자금 지원"
 ENG_solley_op:0 "Like Solley"
 
 
@@ -1358,7 +1358,7 @@ ENG_tuc_military_mosley:0 "최대주의 군대"
 ENG_tuc_foreign_glais:0 "자치주의 대외 정책"
 ENG_tuc_foreign_fem:0 "연방주의 대외 정책"
 ENG_tuc_foreign_mosley:0 "최대주의 대외 정책"
-ENG_show_of_force_op:0 "Fleet Manoeuvres"
+ENG_show_of_force_op:0 "함대 기동"
 kenney_chairman:0 "애니 케니가 의장임"
 horner_chairman:0 "아서 호너가 의장임"
 mann_chairman:0 "토사므 만이 의장임"
