--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -968,11 +968,11 @@ uob.230.d:0 "일반 군인들을 향한 우리의 요청은 답을 받지 못하
 uob.230.a:0 "우리는 실패하였다."
 
 uob.231.t:0 "상처를 꿰매다"
-uob.231.d:0 "평화적으로 쿠데타를 피했지만 애초에 일어나지 말았어야 합니다. 그 여파로 인민은 무엇이 그들은 자국민에게서 등을 돌리게 했는지 궁금해 하게 되었습니다. 그러나 우리가 다시 진정한 브리튼 연방으로 뭉쳐있기 때문에 대중들 사이의 일반적인 기분은 화해입니다."
+uob.231.d:0 "평화적으로 쿠데타를 피했지만 그 쿠데타는 애초에 일어나지 말았어야 하는 것입니다. 그 여파로 인민들은 무엇이 그들을 자국민에게서 등을 돌리게 했는지 궁금해 하게 되었습니다. 하지만 우리가 다시 진정한 브리튼 연방으로 뭉쳐있기 때문에 대중들 사이에서는 일반적으로 화해의 분위기가 돌고 있습니다."
 uob.231.a:0 "용서해야 하지만, 잊지는 않는다."
 
 uob.232.t:0 "연방의 새로운 길"
-uob.232.d:0 "쿠데타는 성공적이었지만, 우리 국가 정체성에 심각한 손상을 남겼습니다. 사람들에게 브리튼이 새로 가는 길을 납득시키는 데에는 시간이 걸릴 것입니다."
+uob.232.d:0 "쿠데타는 성공적이었지만, 우리 국가 정체성에 심각한 손상을 입혔습니다. 인민들에게 브리튼이 새로 가는 길을 납득시키는 데에는 시간이 걸릴 것입니다."
 uob.232.a:0 "곧, 그들은 우리가 맞다는 것을 알게될 것이다."
 
 uob.233.t:0 "최대주의자의 쿠데타!"
