--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -260,10 +260,10 @@ AST_radical_socialist_DEF:0 "오스트랄라시아 연방"
 AST_social_democrat:0 "오스트랄라시아 연합"
 AST_social_democrat_ADJ:0 "오스트랄라시아"
 AST_social_democrat_DEF:0 "오스트랄라시아 연방"
-AST_social_liberal:0 "오스트랄라시아 연=합"
+AST_social_liberal:0 "오스트랄라시아 연합"
 AST_social_liberal_ADJ:0 "오스트랄라시아"
 AST_social_liberal_DEF:0 "오스트랄라시아 연합"
-AST_market_liberal:0 "오스트랄라시아 연"
+AST_market_liberal:0 "오스트랄라시아 연합"
 AST_market_liberal_ADJ:0 "오스트랄라시아"
 AST_market_liberal_DEF:0 "오스트랄라시아 연합"
 AST_social_conservative:0 "오스트랄라시아 연방"
@@ -4002,9 +4002,9 @@ MAG_national_populist_DEF:0 "마다가스카르"
 MAL_totalist:0 "마르크스주의 말리"
 MAL_totalist_ADJ:0 "말리"
 MAL_totalist_DEF:0 "마르크스주의 말리"
-MAL_syndicalist:0 "말리 생디칼리슴 연맹"
+MAL_syndicalist:0 "말리 생디칼리즘 연맹"
 MAL_syndicalist_ADJ:0 "말리"
-MAL_syndicalist_DEF:0 "말리 생디칼리슴 연맹"
+MAL_syndicalist_DEF:0 "말리 생디칼리즘 연맹"
 MAL_radical_socialist:0 "말리 사회공화국"
 MAL_radical_socialist_ADJ:0 "말리"
 MAL_radical_socialist_DEF:0 "말리 사회공화국"
