--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -524,7 +524,7 @@ l_english:
  STATE_522:0 "호주 서부"
  STATE_523:0 "파푸아"
  STATE_524:0 "타이호쿠"
- STATE_525:0 "미마미초센"
+ STATE_525:0 "미나미초센"
  STATE_526:0 "오키나와"
  STATE_527:0 "기타초센"
  STATE_528:0 "규슈"
