--- a/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
@@ -108,7 +108,7 @@ QIE_generic_welfare_desc:0 "Our farmers are the lifeblood of our nation yet they
 QIE_generic_national_identity:0 "중화사상"
 QIE_generic_national_identity_desc:0 "Despite the differences that we all possess between us, we are all Chinese at heart and we as Chinese must do everything we can to support and unite with our fellow countrymen across Asia"
 
-QIE_claim_sqi:0 "산천청국 반란군을 토벌하자"
+QIE_claim_sqi:0 "상청천국 반란군을 토벌하자"
 QIE_claim_sqi_desc:0 "We are now in a position that we can start to strike out and reclaim our lands, our first target should be the Shanqing Rebels, their rabble of cultists should be no match for our trained forces."
 QIE_claim_aog:0 "남부지역을 되찾자"
 QIE_claim_aog_desc:0 "While at the time we accepted the cessation of the southern lands to the combined German AOG the situation is no longer tenable. Our Generals believe we can be victorious so we should not waver on our next step to a United China."
@@ -118,7 +118,7 @@ QIE_claim_lec:0 "조약 항구 탈환"
 QIE_claim_lec_desc:0 "Some of the most prosperous cities within China are currently controlled by the Legation Cities, now that the AOG have been taken care of we should issue an ultimatum. Submit to our rule or face our unwavering arms."
 QIE_claim_mon:0 "몽골의 운명"
 QIE_claim_mon_desc:0 "The Mad Baron massacres his own people and foe alike, we must put a stop to his depraved and warped regime at once!."
-QIE_claim_xsm:0 "서북삼마의 운명"
+QIE_claim_xsm:0 "시베이싼마의 운명"
 QIE_claim_xsm_desc:0 "The Ma's have enjoyed their autonomy for too long now, we must bring them back into the fold directly"
 QIE_claim_tib:0 "티베트의 운명"
 QIE_claim_tib_desc:0 "Tibet are a weak state that has long been claimed by our empire, we should make efforts to bring this to fruition."
