--- a/Kaiserreich Korean Translation/localisation/KR_Romania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Romania_l_english.yml
@@ -4,12 +4,12 @@ l_english:
 ROM_supported_us_in_civil_war:0 "내전동안 우리를 지원함"
 ROM_supported_the_other_side_in_civil_war:0 "내전동안 반대파를 지원함"
 ROM_extradited_iron_guard:0 "Extradited Iron Guard"
-ROM_kept_iron_guard:0 "Home to the Iron Guard leadership"
+ROM_kept_iron_guard:0 "철위대 리더쉽의 요람"
 ROM_claimed_transylvania:0 "Pressed claims on Transylvania"
 ROM_suspected_assassination:0 "Suspected of assassination attempt"
 ROM_nationalized_oil_fields:0 "Nationalised oil fields"
 ROM_continued_oil_shipments:0 "Continued oil shipments"
-ROM_stopped_oil_shipments:0 "Stopped oil shipments"
+ROM_stopped_oil_shipments:0 "기름 수송 중단"
 ROM_stopped_oil_shipments_trade:0 "Restricted exports"
 ROM_handed_over_dobrudzha:0 "Handed Dobrogea over"
 ROM_refused_dobrudzha:0 "Refused to hand over Dobrogea"
